fixing whitespace

--- a/homepage.css
+++ b/homepage.css
@@ -1,6 +1,8 @@
 body{
 padding: 0;
 margin: 0;
+background: #000;
+height: 100%;
 }
 
 h1 {
